WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210558
REGRESSION (
r259762
): Should always hit test for editable elements if the WKWebView is fully editable
https://bugs.webkit.org/show_bug.cgi?id=210558
Summary
REGRESSION (r259762): Should always hit test for editable elements if the WKW...
Daniel Bates
Reported
2020-04-15 11:09:32 PDT
If the WKWebView is fully editable (-[WKWebView _setEditable:YES] was called on it) then always hit test for editable elements.
Attachments
Patch
(3.73 KB, patch)
2020-04-15 11:34 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
To Land
(3.65 KB, patch)
2020-04-15 11:45 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2020-04-15 11:09:44 PDT
<
rdar://problem/61798347
>
Daniel Bates
Comment 2
2020-04-15 11:34:04 PDT
Created
attachment 396553
[details]
Patch
Wenson Hsieh
Comment 3
2020-04-15 11:35:54 PDT
Comment on
attachment 396553
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=396553&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/RequestTextInputContext.mm:205 > + NSArray<_WKTextInputContext *> *contexts;
Nit - maybe just move this down so that it’s `NSArray<_WKTextInputContext *> *contexts = [webView synchronouslyRequestTextInputContextsInRect:[webView bounds]];`?
Daniel Bates
Comment 4
2020-04-15 11:43:59 PDT
Comment on
attachment 396553
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=396553&action=review
Thanks for the review!
>> Tools/TestWebKitAPI/Tests/WebKitCocoa/RequestTextInputContext.mm:205 >> + NSArray<_WKTextInputContext *> *contexts; > > Nit - maybe just move this down so that it’s `NSArray<_WKTextInputContext *> *contexts = [webView synchronouslyRequestTextInputContextsInRect:[webView bounds]];`?
I'll just inline [webView synchronouslyRequestTextInputContextsInRect:[webView bounds]] into the EXPECT_GE to get rid of the local altogether.
Daniel Bates
Comment 5
2020-04-15 11:45:39 PDT
Created
attachment 396556
[details]
To Land
Daniel Bates
Comment 6
2020-04-16 09:52:29 PDT
Comment on
attachment 396556
[details]
To Land Clearing flags on attachment: 396556 Committed
r260193
: <
https://trac.webkit.org/changeset/260193
>
Daniel Bates
Comment 7
2020-04-16 09:52:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug