Cherry-pick r260193. rdar://problem/61897737

REGRESSION (r259762): Should always hit test for editable elements if the WKWebView is fully editable
    https://bugs.webkit.org/show_bug.cgi?id=210558
    <rdar://problem/61798347>

    Reviewed by Wenson Hsieh.

    Source/WebKit:

    If the entire WKWebView is marked editable (via SPI -[WKWebView _setEditable]) then
    always ask the web process to hit test the page because every element is considered
    editable.

    * UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView _requestTextInputContextsInRect:completionHandler:]):

    Tools:

    Add a test.

    * TestWebKitAPI/Tests/WebKitCocoa/RequestTextInputContext.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/223477@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260193 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/223290.7@safari-610.1.10-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.10-branch@260212 268f45cc-cd09-0410-ab3c-d52691b4dbfc